<resources>
    <string name="app_name">NoteToSelf</string>
    <string name="due_date_format">Due %s</string>
    <string name="section_due_this_week">Due this week</string>
    <string name="section_todos">Todos</string>
    <string name="section_regular">Repeating</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_edit_task">Add or Edit Task</string>
    <string name="add_task">Add Task</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Description (optional)</string>
    <string name="label_type">Type</string>
    <string name="type_due_date">Due date</string>
    <string name="type_todo">Todo</string>
    <string name="type_regular">Repeating</string>
    <string name="action_pick_due_date">Pick due date</string>
    <string name="hint_interval">Every</string>
    <string name="schedule_fixed">Fixed (same day each time)</string>
    <string name="schedule_floating">Floating (after completion)</string>
    <string name="action_pick_start_date">Pick start date</string>
    <string name="label_reminders">Reminders</string>
    <string name="label_sticky_notification">Sticky notification</string>
    <string name="action_pick_show_after">Only show after date (optional)</string>
    <string name="hint_remind_every">Remind every (optional)</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete task</string>
    <string name="error_title_required">Title is required</string>

    <string name="channel_sticky_name">Task reminders</string>
    <string name="channel_sticky_description">Ongoing summary of your active tasks</string>
    <string name="sticky_notification_title">Your tasks</string>
    <string name="sticky_notification_placeholder">Tap to open NoteToSelf</string>
    <string name="action_complete">Complete</string>
    <string name="action_snooze">Snooze</string>
    <string name="notification_subtitle_todo">Todo</string>

    <string name="backup_tasks">Backup Tasks</string>
    <string name="restore_tasks">Restore Tasks</string>

    <string name="action_previous_month">Previous month</string>
    <string name="action_next_month">Next month</string>
    <string name="action_add_due_date_here">+ Due date</string>
    <string name="action_add_regular_here">+ Repeating</string>
    <string name="text_no_tasks_this_day">No tasks this day</string>

    <string name="label_colour">Color</string>

    <string name="title_schedule">Schedule</string>
    <string name="title_add_edit_class">Add or Edit Class</string>
    <string name="hint_class_title">Class name</string>
    <string name="hint_class_location">Location (optional)</string>
    <string name="label_day">Day</string>
    <string name="action_pick_start_time">Start time</string>
    <string name="action_pick_end_time">End time</string>
    <string name="class_time_format">%1$s – %2$s</string>
    <string name="add_class">Add Class</string>

    <string name="delete_task_title">Delete task?</string>
    <string name="delete_task_message">This can\'t be undone.</string>
    <string name="delete_repeating_message">This deletes the repeating task and all of its history. This can\'t be undone.</string>
    <string name="dark_mode">Dark mode</string>
</resources>