<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/outline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/outline_event_note_24"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/outline_calendar_month_24"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/history"
        android:icon="@drawable/outline_history_24"
        android:title="@string/title_history" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/outline_settings_24"
        android:title="@string/title_settings" />
</menu>